force-app/main/default/objects/Test_Master__c/fields/Assessment_Question_Master__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Question_Master__c</fullName>
    <label>Assessment Question Master</label>
    <referenceTo>Ass_Ques_Master__c</referenceTo>
    <relationshipLabel>Test Masters</relationshipLabel>
    <relationshipName>Test_Masters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>