force-app/main/default/objects/Test_Master__c/fields/CE_Module__c.field-meta.xml
<CustomField>
    <fullName>CE_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CE-Module</label>
    <referenceTo>CE_Modules__c</referenceTo>
    <relationshipLabel>Test Masters</relationshipLabel>
    <relationshipName>Test_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>