force-app/main/default/objects/Test_Master__c/fields/Course_Master__c.field-meta.xml
<CustomField>
    <fullName>Course_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Master</label>
    <referenceTo>Course_Master__c</referenceTo>
    <relationshipLabel>Test Masters</relationshipLabel>
    <relationshipName>Test_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>