force-app/main/default/objects/Test_Master__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>