force-app/main/default/objects/Test_Master__c/listViews/Test_Master.listView-meta.xml
<ListView>
    <fullName>Test_Master</fullName>
    <columns>NAME</columns>
    <columns>Assessment_Question_Master__c</columns>
    <columns>CE_Module__c</columns>
    <columns>Course_Master__c</columns>
    <columns>Test_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Test Master</label>
</ListView>